// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField should render a basic text input 1`] = `
<ml
  className=""
  color=""
  tag="div"
>
  <Hl
    className="control-label"
    htmlFor="id-input-2"
    tag="label"
  >
    label
  </Hl>
  <div
    className=""
  >
    <ei
      className=""
      id="id-input-2"
      onChange={[Function]}
      placeholder="placeholder"
      tag="p"
      type="text"
      value="value"
    />
  </div>
</ml>
`;

exports[`InputField should render a help text 1`] = `
<ml
  className=""
  color=""
  tag="div"
>
  <div
    className=""
  >
    <ei
      className=""
      id="id-input-5"
      onChange={[Function]}
      tag="p"
      type="text"
      value="value"
    />
  </div>
  <vl
    color="muted"
    tag="small"
  >
    help text
  </vl>
</ml>
`;

exports[`InputField should render a hidden text input 1`] = `
<ml
  className=""
  color=""
  tag="div"
>
  <div
    className=""
  >
    <ei
      className=""
      hidden={true}
      id="id-input-9"
      onChange={[Function]}
      tag="p"
      type="text"
      value="value"
    />
  </div>
</ml>
`;

exports[`InputField should render a required text input 1`] = `
<ml
  className="undefined"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <ei
      className=""
      id="id-input-3"
      onChange={[Function]}
      required={true}
      tag="p"
      type="text"
      value="value"
    />
  </div>
</ml>
`;

exports[`InputField should render a text input with a right addon 1`] = `
<ml
  className=""
  color=""
  tag="div"
>
  <div
    className="input-group"
  >
    <ei
      className=""
      id="id-input-7"
      onChange={[Function]}
      tag="p"
      type="text"
      value="value"
    />
    <span
      className="input-group-addon"
    >
      @rightaddon.io
    </span>
  </div>
</ml>
`;

exports[`InputField should render a text input with an onChange handler, and call this handler on change 1`] = `
<InputField
  onChange={[Function]}
  type="text"
  value="value"
>
  <ml
    className=""
    color=""
    tag="div"
  >
    <div
      className="form-group"
    >
      <div
        className=""
      >
        <ei
          className=""
          id="id-input-8"
          onChange={[Function]}
          tag="p"
          type="text"
          value="value"
        >
          <input
            className="form-control"
            id="id-input-8"
            onChange={[Function]}
            type="text"
            value="value"
          />
        </ei>
      </div>
    </div>
  </ml>
</InputField>
`;

exports[`InputField should render an inline required text input 1`] = `
<ml
  className="undefined d-inline-block"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <ei
      className=""
      id="id-input-6"
      onChange={[Function]}
      required={true}
      tag="p"
      type="text"
      value="value"
    />
  </div>
</ml>
`;

exports[`InputField should render an inline text input 1`] = `
<ml
  className="d-inline-block"
  color=""
  tag="div"
>
  <div
    className=""
  >
    <ei
      className=""
      id="id-input-4"
      onChange={[Function]}
      tag="p"
      type="text"
      value="value"
    />
  </div>
</ml>
`;

exports[`InputField should render the input with an error 1`] = `
<ml
  className=""
  color="danger"
  tag="div"
>
  <div
    className=""
  >
    <ei
      className="form-control-danger"
      id="id-input-10"
      onChange={[Function]}
      tag="p"
      type="text"
      value="value"
    />
  </div>
  <Errors
    tag={[Function]}
  >
    the value is wrong
  </Errors>
</ml>
`;

exports[`InputField should use default props 1`] = `
Object {
  "onChange": [Function],
  "type": "text",
  "value": "value",
}
`;
